--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "cleverbot.io": "^1.0.4",
     "discord.js": "^11.3.2",
-    "mysql": "^2.16.0",
+    "enmap": "^3.0.2",
     "npm": "^5.8.0"
   }
 }
