--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cleverbot.io": "^1.0.4",
     "discord.js": "^11.3.2",
     "enmap": "^3.0.2",
+    "firebase-admin": "^6.0.0",
     "npm": "^5.8.0"
   }
 }
