--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "discord.js": "^11.5.1",
     "enmap": "^5.2.3",
     "firebase-admin": "^8.8.0",
-    "npm": "^6.13.4"
+    "node-opus": "^0.3.3",
+    "npm": "^6.13.4",
+    "ytdl-core": "^1.0.3"
   }
 }
