--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase-admin": "^8.8.0",
     "node-opus": "^0.3.3",
     "npm": "^6.13.4",
-    "ytdl-core": "^1.0.3"
+    "ytdl-core": "^1.0.3",
+    "ffmpeg": "0.0.4"
   }
 }
