--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-opus": "^0.3.3",
     "npm": "^6.13.4",
     "ytdl-core": "^1.0.3",
+    "ytpl": "^0.1.19",
     "ytsr": "^0.1.10"
   }
 }
