--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   "author": "Sygix",
   "license": "",
   "dependencies": {
+    "@discordjs/opus": "^0.5.0",
     "cleverbot.io": "^1.0.4",
-    "discord.js": "^11.6.4",
-    "emoji-regex": "^8.0.0",
-    "enmap": "^5.2.4",
-    "firebase-admin": "^8.12.1",
-    "node-opus": "^0.3.3",
-    "npm": "^6.14.5",
-    "ytdl-core": "^3.1.0",
-    "ytpl": "^0.1.21",
-    "ytsr": "^0.1.14"
+    "discord.js": "^12.5.3",
+    "emoji-regex": "^9.2.2",
+    "enmap": "^5.8.5",
+    "firebase-admin": "^9.8.0",
+    "npm": "^7.14.0",
+    "ytdl-core": "^4.8.0",
+    "ytpl": "^2.2.1",
+    "ytsr": "^3.5.0"
   }
 }
